# ePet

./: .gitignore  readme.md
android/: .gitignore  .gitignore.txt  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: cnap.py  core.py  forgot_password.py  image.py  login.py  organization.py  pets.py  requests.py  reset_password.py  users.py  vaccinations.py
backend/src/authentication/: router.py  schemas.py  service.py
backend/src/db/: database.py  models.py
backend/src/organizations/: router.py  schemas.py  service.py
backend/src/password/: forgot_password.py  reset_password.py  schemas.py
backend/src/pets/: router.py  schemas.py  service.py
backend/src/requests/: router.py  schemas.py  service.py
backend/src/schemas/: cnap.py  organization.py  organization_schemas.py  password_schemas.py  pet_schemas.py  report_schemas.py  token_schemas.py  user.py  user_schemas.py  vaccination_schemas.py
backend/src/users/: router.py  schemas.py  service.py
backend/src/utils/: email_utils.py  pdf_generator.py
backend/src/vaccinations/: router.py  schemas.py  service.py
web/: jest.config.ts  next-env.d.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
web/components/: ErrorBoundary.tsx
web/hooks/: AuthProvider.tsx  useAuth.tsx  useInfiniteScroll.tsx
web/pages/: 404.tsx  _app.jsx  _app.tsx  index.tsx  reset-password.tsx  resetPassword.jsx  resetPassword.tsx  signIn.jsx  signIn.tsx
web/services/: api.ts  authService.ts  organizationService.ts  (+2 more)
(+253 files in other folders)
